# agentbase

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile.fly  docker-compose.yml  fly.toml  render.yaml
backend/: .env.example  DESIGN.md  Dockerfile  _eval_batch.py  pyproject.toml  rebuild_vectors.py
backend/app/: config.py  main.py  models.py
backend/app/eval/: __init__.py  golden.jsonl  metrics.py  run.py
backend/app/ingest/: loader.py  pdf.py
backend/app/rag/: chunker.py  embedder.py  fusion.py  graph.py  pipeline.py  quality.py  rerank.py  retrieve.py  retrieve_subgraph.py  sparse.py  store.py
backend/app/routers/: blogs.py  chat.py  ingest.py  papers.py
backend/data/: langgraph.db-shm
data/: arxiv_metadata.jsonl  blog_metadata.jsonl  eval_report.json
data/bm25/: indptr.csc.index.npy  params.index.json  vocab.index.json
deploy/: deploy.sh
deploy/nginx/: agentbase.conf
deploy/systemd/: agentbase-web.service
landing/: .impeccable.md  CLAUDE.md  DISPLAY.md  Dockerfile  package.json
landing/app/: globals.css  layout.tsx  page.tsx
landing/app/api/chat/: route.ts
landing/app/chat/: layout.tsx  page.tsx
landing/app/demo/: chat-demo.tsx
landing/app/engine/: page.tsx
landing/components/: eval-dashboard.tsx  pipeline-viz.tsx  search-chat.tsx  trace-explorer.tsx
landing/lib/: eval-data.ts  issues.ts
scripts/: enhance_papers.py  evaluate.py  fetch_arxiv.py  fetch_blogs.py  monitor_arxiv.sh
